[gd_scene load_steps=2 format=3 uid="uid://dr8b8xqpjr40f"]

[ext_resource type="Script" uid="uid://hnwrqqgwu4cu" path="res://safe_1.gd" id="1_fovfb"]

[node name="safe1" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 51.0
offset_bottom = 31.0
script = ExtResource("1_fovfb")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Safe 1"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 1019.0
offset_bottom = 771.0

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 126.0
offset_top = 232.0
offset_right = 194.0
offset_bottom = 378.0
theme_override_font_sizes/font_size = 100
text = "2,"

[node name="Label2" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 246.0
offset_top = 232.0
offset_right = 314.0
offset_bottom = 378.0
theme_override_font_sizes/font_size = 100
text = "3,"

[node name="Label3" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 363.0
offset_top = 232.0
offset_right = 431.0
offset_bottom = 378.0
theme_override_font_sizes/font_size = 100
text = "5,"

[node name="Label4" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 476.0
offset_top = 232.0
offset_right = 544.0
offset_bottom = 378.0
theme_override_font_sizes/font_size = 100
text = "7,"

[node name="answer" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 591.0
offset_top = 232.0
offset_right = 659.0
offset_bottom = 378.0
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Label6" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 442.0
offset_right = 1004.0
offset_bottom = 701.0
theme_override_font_sizes/font_size = 100
text = "Attempts Remaining"
horizontal_alignment = 1

[node name="attempts_remaining" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 582.0
offset_right = 1004.0
offset_bottom = 719.0
theme_override_font_sizes/font_size = 100
text = "3"
horizontal_alignment = 1

[node name="up_arrow" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 563.0
offset_top = 154.0
offset_right = 686.0
offset_bottom = 238.0
text = "UP"

[node name="down_arrow" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 561.0
offset_top = 363.0
offset_right = 684.0
offset_bottom = 447.0
text = "Down"

[node name="submit" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 761.0
offset_top = 255.0
offset_right = 884.0
offset_bottom = 339.0
text = "Submit"

[node name="close_button" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 908.0
offset_right = 1018.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 100
text = "x"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/up_arrow" to="." method="_on_up_arrow_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/down_arrow" to="." method="_on_down_arrow_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/close_button" to="." method="_on_close_button_pressed"]
